--- a/css/perfil.css
+++ b/css/perfil.css
@@ -17,8 +17,7 @@ body {
     margin: 0 50px;
 }
 
-.contenedor-header .header1:hover,
-.header2:hover {
+.contenedor-header .header1:hover {
     background-color: #088DD1;
 }
 
@@ -27,10 +26,8 @@ body {
     margin-left: 80px;
 }
 
-.contenedor-header .header1,
-.header2,
-a {
-    font-size: 1.5rem;
+.contenedor-header .header1 a {
+    /* font-size: 1.5rem; */
     color: #fff;
     text-decoration: none;
     font-style: bold;
@@ -51,20 +48,18 @@ a {
 .contenido .presentacion {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin: 50px 80px;
+    margin: 20px auto;
     padding: 10px;
-    /* justify-items: center; */
     border: 5px solid #bababa;
     border-radius: 10px;
     box-shadow: 10px 10px 10px gray;
 }
 
 .contenido .presentacion {
-    height: 450px;
-    align-self: center;
-    justify-self: center;
+    /* align-self: center; */
+    /* justify-self: center; */
     text-align: center;
-    position: relative;
+    /* position: relative; */
 }
 
 .contenido .presentacion .img {
@@ -74,6 +69,7 @@ a {
 
 .contenido .presentacion .img .img-photo {
     width: 80%;
+    height: 400px;
     border: 5px solid #fff;
     border-radius: 10px;
     box-shadow: 10px 10px 10px gray;
@@ -87,6 +83,7 @@ a {
 
 .contenido .descripcion {
     align-self: center;
+    text-align: right;
 }
 
 .contenido .descripcion h2 {
@@ -105,11 +102,18 @@ p {
 .contenido .tiempo {
     display: grid;
     grid-template-columns: 1fr;
+    grid-template-rows: 100px 1fr;
     gap: 10px;
     margin: 120px 0;
 }
 
-.contenido .tiempo h2 {
+.contenido .tiempo .tiempo-titulo {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    text-align: center;
+}
+
+.contenido .tiempo .tiempo-titulo h2 {
     display: inline-block;
     position: relative;
     justify-self: center;
@@ -118,8 +122,8 @@ p {
 
 /* lineas a los costados */
 
-.contenido .tiempo h2::after,
-.contenido .tiempo h2::before {
+.contenido .tiempo .tiempo-titulo h2::after,
+.contenido .tiempo .tiempo-titulo h2::before {
     content: "";
     position: absolute;
     width: 120px;
@@ -145,7 +149,7 @@ p {
 
 .contenido .tiempo .tiempo-dividido .actividades {
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 30px 1fr;
     text-align: center;
     justify-items: center;
     border: 1px solid gray;
@@ -215,6 +219,7 @@ footer .social-desa a img {
 }
 
 footer .social-desa h3 {
+    font-size: .9em;
     color: white;
 }
 
