Editando página en vista para móviles

--- a/css/perfil.css
+++ b/css/perfil.css
@@ -264,4 +264,7 @@ footer .social-desa h3 img {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
     }
+    .contenido .descripcion {
+        text-align: center;
+    }
 }
