--- a/css/perfil.css
+++ b/css/perfil.css
@@ -8,17 +8,9 @@ body {
     display: flex;
     background-color: #419CCA;
     width: 100%;
-    height: 60px;
+    height: 70px;
     justify-items: center;
     align-items: center;
-}
-
-.contenedor-header:nth-child() {
-    margin: 0 50px;
-}
-
-.contenedor-header .header1:hover {
-    background-color: #088DD1;
 }
 
 .contenedor-header .header1 {
@@ -26,15 +18,18 @@ body {
     margin-left: 80px;
 }
 
+.contenedor-header .header1:hover {
+    background-color: #088DD1;
+}
+
 .contenedor-header .header1 a {
-    /* font-size: 1.5rem; */
+    font-size: 1em;
     color: #fff;
     text-decoration: none;
     font-style: bold;
 }
 
-.contenedor-header .header1,
-.header2 a {
+.contenedor-header .header1 a {
     padding: 6px;
     border: 1px solid white;
     border-radius: 5px;
@@ -42,24 +37,20 @@ body {
 }
 
 .contenido {
-    margin: 0 80px;
+    /* margin: 0 80px; */
 }
 
 .contenido .presentacion {
+    height: 450px;
+    background-color: #C4C4C6;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin: 20px auto;
+    /* margin: 20px 0; */
     padding: 10px;
-    border: 5px solid #bababa;
+    /* border: 5px solid #bababa;
     border-radius: 10px;
-    box-shadow: 10px 10px 10px gray;
-}
-
-.contenido .presentacion {
-    /* align-self: center; */
-    /* justify-self: center; */
+    box-shadow: 10px 10px 10px gray; */
     text-align: center;
-    /* position: relative; */
 }
 
 .contenido .presentacion .img {
@@ -68,20 +59,15 @@ body {
 }
 
 .contenido .presentacion .img .img-photo {
-    width: 80%;
+    width: 60%;
     height: 400px;
     border: 5px solid #fff;
     border-radius: 10px;
     box-shadow: 10px 10px 10px gray;
 }
 
-
-/* estilos para texto */
-
-
-/* estilo para todos los h2 de la página */
-
 .contenido .descripcion {
+    margin-right: 80px;
     align-self: center;
     text-align: right;
 }
@@ -91,8 +77,9 @@ body {
     font-weight: bolder;
 }
 
-.contenido .presentacion div h2,
+.contenido .presentacion .descripcion h2,
 p {
+    font-size: 1.3em;
     justify-self: center;
     align-items: center;
     line-height: 50px;
@@ -104,7 +91,7 @@ p {
     grid-template-columns: 1fr;
     grid-template-rows: 100px 1fr;
     gap: 10px;
-    margin: 120px 0;
+    margin: 70px 0;
 }
 
 .contenido .tiempo .tiempo-titulo {
@@ -140,40 +127,42 @@ p {
     right: -140px;
 }
 
+
+/* mi tiempo  */
+
 .contenido .tiempo .tiempo-dividido {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 20px;
+    display: flex;
     justify-items: center;
+    justify-content: center;
 }
 
 .contenido .tiempo .tiempo-dividido .actividades {
-    width: 450px;
+    width: 250px;
+    height: 310px;
+    margin-right: 20px;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 60px 1fr;
     text-align: center;
     justify-items: center;
     border: 1px solid gray;
-    border-radius: 10px;
+    border-radius: 20px;
     background-color: #DEF3F3;
     box-shadow: 5px 5px 5px gray;
 }
 
 .contenido .tiempo .tiempo-dividido .actividades h4 {
-    /* width: 80px; */
-    color: #FDAE04;
-    font-size: 1.3rem;
+    color: #ed143d;
+    font-size: 1.2em;
     font-weight: bold;
-    grid-row: 1;
 }
 
 .contenido .tiempo .tiempo-dividido .actividades p {
     color: #1B678C;
-    font-size: 1.2;
+    font-size: .9em;
     font-weight: bolder;
-    grid-row: 2;
+    margin: 0;
+    padding: 0 5px;
 }
 
 footer {
@@ -184,6 +173,7 @@ footer {
     z-index: 5;
     background-color: #419CCA;
     border: 1px solid black;
+    box-shadow: -100px -100px -100px #baba;
     text-align: center;
     margin-top: 100px;
     padding: 10px 15px;
@@ -197,7 +187,8 @@ footer .info-desa {
 }
 
 footer .info-desa h3 {
-    font-size: .9em;
+    font-size: 1em;
+    font-style: italic;
     color: white;
     margin-left: 80px;
     /* box-shadow: 2px 2px 2px gray; */
@@ -213,7 +204,10 @@ footer .social-desa {
 }
 
 footer .social-desa h2 {
-    color: #EAB016;
+    color: #f3ff3b;
+    font-size: 1.5em;
+    font-style: italic;
+    letter-spacing: 5px;
     font-weight: bolder;
 }
 
@@ -223,7 +217,8 @@ footer .social-desa a img {
 }
 
 footer .social-desa h3 {
-    font-size: .9em;
+    font-size: 1em;
+    font-style: italic;
     color: white;
 }
 
