--- a/css/perfil.css
+++ b/css/perfil.css
@@ -101,6 +101,7 @@ p {
 }
 
 .contenido .tiempo .tiempo-titulo h2 {
+    font-size: 1.5em;
     display: inline-block;
     position: relative;
     justify-self: center;
@@ -259,9 +260,25 @@ footer .social-desa h3 img {
 } */
 
 @media screen and (max-width: 1024px) {
-    /* .contenido .presentacion {
-        width: 100%;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
-    } */
+    .contenido .presentacion .img .img-photo {
+        height: 300px;
+    }
+    .contenido .presentacion .descripcion p {
+        font-size: 1em;
+        line-height: 20px;
+    }
+    .contenido .tiempo .tiempo-titulo h2 {
+        font-size: 16px;
+    }
+    .contenido .tiempo .tiempo-dividido .actividades h4 {
+        font-size: 14px;
+    }
+    .contenido .tiempo .tiempo-dividido .actividades p {
+        font-size: 12px;
+    }
+    .contenido .tiempo .tiempo-dividido .actividades {
+        width: 200px;
+        height: 260px;
+        grid-template-rows: 30px 1fr;
+    }
 }
