--- a/css/perfil.css
+++ b/css/perfil.css
@@ -265,20 +265,33 @@ footer .social-desa h3 img {
     }
     .contenido .presentacion .descripcion p {
         font-size: 1em;
-        line-height: 20px;
+        line-height: 30px;
     }
     .contenido .tiempo .tiempo-titulo h2 {
         font-size: 16px;
+    }
+    .contenido .tiempo .tiempo-dividido .actividades {
+        width: 200px;
+        height: 250px;
+        grid-template-rows: 40px 1fr;
     }
     .contenido .tiempo .tiempo-dividido .actividades h4 {
         font-size: 14px;
     }
     .contenido .tiempo .tiempo-dividido .actividades p {
         font-size: 12px;
+        line-height: 40px;
     }
-    .contenido .tiempo .tiempo-dividido .actividades {
-        width: 200px;
-        height: 260px;
-        grid-template-rows: 30px 1fr;
+    footer .info-desa h3 {
+        font-size: .8em;
+    }
+    footer .social-desa h2 {
+        font-size: 1.2em;
+    }
+    footer .social-desa h3 {
+        font-size: .8em;
+    }
+    footer .social-desa a img {
+        width: 40px;
     }
 }
