--- a/css/perfil.css
+++ b/css/perfil.css
@@ -273,6 +273,8 @@ footer .social-desa h3 img {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
+        justify-self: center;
+        gap: 20px;
     }
     footer .social-desa h3 {
         font-size: .9em;
