--- a/css/perfil.css
+++ b/css/perfil.css
@@ -20,12 +20,12 @@ body {
 }
 
 .contenedor-header .header1 a {
-    font-size: 1em;
+    font-size: 1.5em;
     color: #fff;
     text-decoration: none;
-    padding: 6px;
+    padding: 10px;
     border: 1px solid white;
-    border-radius: 5px;
+    border-radius: 10px;
     box-shadow: 2px 2px white;
 }
 
@@ -34,7 +34,7 @@ body {
 }
 
 .contenido .presentacion {
-    height: max-content;
+    height: 625px;
     background-color: #C4C4C6;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -49,7 +49,7 @@ body {
 
 .contenido .presentacion .img .img-photo {
     width: 60%;
-    height: 400px;
+    height: 500px;
     border: 5px solid #fff;
     border-radius: 10px;
     box-shadow: 10px 10px 10px gray;
@@ -61,18 +61,18 @@ body {
     text-align: right;
 }
 
-.contenido .descripcion h2 {
+.contenido .presentacion .descripcion h2 {
+    font-size: 2.5em;
     color: crimson;
     font-weight: bolder;
 }
 
-.contenido .presentacion .descripcion h2,
-p {
-    font-size: 1.3em;
+.contenido .presentacion .descripcion p {
+    font-size: 1.5em;
     justify-self: center;
     align-items: center;
     line-height: 50px;
-    padding: 0 30px 0 10px;
+    /* padding: 0 30px 0 10px; */
 }
 
 .contenido .tiempo {
@@ -81,6 +81,10 @@ p {
     grid-template-rows: 100px 1fr;
     gap: 10px;
     margin: 70px 0;
+    text-align: center;
+    justify-self: center;
+    justify-content: center;
+    justify-items: center;
 }
 
 .contenido .tiempo .tiempo-titulo {
@@ -117,30 +121,28 @@ p {
     right: -140px;
 }
 
-
-/* mi tiempo  */
-
 .contenido .tiempo .tiempo-dividido {
-    width: 700px;
+    width: 1000px;
+    justify-items: center;
+    justify-self: center;
+    line-height: 50px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 20px;
-    justify-items: center;
-    justify-self: center;
 }
 
 .contenido .tiempo .tiempo-dividido .actividades {
-    width: 300px;
+    width: 450px;
     height: 310px;
     margin: 0;
     padding: 0;
-    /* margin-right: 10px; */
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 60px 1fr;
     text-align: center;
     justify-items: center;
+    align-items: center;
     border: 1px solid gray;
     border-radius: 20px;
     background-color: #DEF3F3;
@@ -149,13 +151,13 @@ p {
 
 .contenido .tiempo .tiempo-dividido .actividades h4 {
     color: #ed143d;
-    font-size: 1.2em;
+    font-size: 1.5em;
     font-weight: bold;
 }
 
 .contenido .tiempo .tiempo-dividido .actividades p {
     color: #1B678C;
-    font-size: .9em;
+    font-size: 1.5em;
     font-weight: bolder;
     margin: 0;
     padding: 0 5px;
@@ -179,11 +181,10 @@ footer {
 footer .info-desa {
     grid-template-rows: 1fr 1fr 1fr 1fr;
     text-align: center;
-    /* justify-self: start; */
 }
 
 footer .info-desa h3 {
-    font-size: 1em;
+    font-size: 1.5em;
     font-style: italic;
     color: white;
     margin-left: 80px;
@@ -201,7 +202,7 @@ footer .social-desa {
 
 footer .social-desa h2 {
     color: #f3ff3b;
-    font-size: 1.5em;
+    font-size: 1.8em;
     font-style: italic;
     letter-spacing: 5px;
     font-weight: bolder;
@@ -213,7 +214,7 @@ footer .social-desa a img {
 }
 
 footer .social-desa h3 {
-    font-size: 1em;
+    font-size: 1.5em;
     font-style: italic;
     color: white;
 }
@@ -274,8 +275,7 @@ footer .social-desa h3 img {
     }
 }
 
-
-/* @media screen and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
     .contenido .presentacion .img .img-photo {
         height: 300px;
     }
@@ -284,19 +284,24 @@ footer .social-desa h3 img {
         line-height: 30px;
     }
     .contenido .tiempo .tiempo-titulo h2 {
-        font-size: 16px;
+        font-size: 24px;
     }
     .contenido .tiempo .tiempo-dividido .actividades {
-        width: 200px;
+        width: 300px;
         height: 250px;
         grid-template-rows: 40px 1fr;
     }
     .contenido .tiempo .tiempo-dividido .actividades h4 {
-        font-size: 14px;
+        font-size: 18px;
+        grid-row: 1;
     }
     .contenido .tiempo .tiempo-dividido .actividades p {
-        font-size: 12px;
+        font-size: 16px;
         line-height: 40px;
+        grid-row: 2;
+        align-items: center;
+        align-items: center;
+        align-content: center;
     }
     footer .info-desa h3 {
         font-size: .8em;
@@ -310,4 +315,4 @@ footer .social-desa h3 img {
     footer .social-desa a img {
         width: 40px;
     }
-} */
+}
