Los cambios no se aplican a 425px

--- a/css/perfil.css
+++ b/css/perfil.css
@@ -255,6 +255,8 @@ footer .social-desa h3 img {
     }
 }
 
+
+/* 
 @media screen and (max-width: 1024px) {
     .contenedor-header .header1 a {
         font-size: 1.2em;
@@ -301,4 +303,4 @@ footer .social-desa h3 img {
     footer .social-desa a img {
         width: 40px;
     }
-}
+} */
