Quitando media querys

--- a/css/perfil.css
+++ b/css/perfil.css
@@ -225,6 +225,8 @@ footer .social-desa h3 img {
     padding-right: 10px;
 }
 
+
+/* 
 @media screen and (max-width: 425px) {
     .contenedor-header .header1 a {
         font-size: 3em;
@@ -309,4 +311,4 @@ footer .social-desa h3 img {
     footer .social-desa a img {
         width: 40px;
     }
-}
+} */
