Agregando de nuevo los media querie

--- a/css/perfil.css
+++ b/css/perfil.css
@@ -9,7 +9,6 @@ body {
     background-color: #419CCA;
     width: 100%;
     height: 70px;
-    justify-items: center;
     align-items: center;
 }
 
@@ -225,8 +224,6 @@ footer .social-desa h3 img {
     padding-right: 10px;
 }
 
-
-/* 
 @media screen and (max-width: 425px) {
     .contenedor-header .header1 a {
         font-size: 3em;
@@ -311,4 +308,4 @@ footer .social-desa h3 img {
     footer .social-desa a img {
         width: 40px;
     }
-} */
+}
