--- a/css/perfil.css
+++ b/css/perfil.css
@@ -5,21 +5,26 @@ body {
 }
 
 .contenedor-header {
-    display: flex;
-    background-color: #419CCA;
     width: 100%;
-    height: 70px;
+    height: max-content;
+    background-color: #419CCA;
+    display: grid;
+    grid-template-columns: 150px 150px;
+    grid-template-rows: 90px;
     align-items: center;
+    justify-self: center;
+    padding-left: 40px;
 }
 
 .contenedor-header .header1 {
     align-items: center;
     margin-left: 80px;
     font-weight: bolder;
+    justify-self: center;
 }
 
 .contenedor-header .header1 a {
-    font-size: 1.5em;
+    font-size: 1.2em;
     color: #fff;
     text-decoration: none;
     padding: 10px;
