--- a/css/perfil.css
+++ b/css/perfil.css
@@ -6,12 +6,13 @@ body {
 
 .contenedor-header {
     width: 100%;
-    height: max-content;
+    height: 70px;
     background-color: #419CCA;
     display: grid;
     grid-template-columns: 200px 200px;
     grid-template-rows: 90px;
     align-items: center;
+    align-content: center;
     justify-content: right;
 }
 
@@ -38,7 +39,7 @@ body {
 }
 
 .contenido .presentacion {
-    height: 625px;
+    height: 500px;
     background-color: #C4C4C6;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -54,7 +55,7 @@ body {
 
 .contenido .presentacion .img .img-photo {
     width: 60%;
-    height: 500px;
+    height: 450px;
     border: 5px solid #fff;
     border-radius: 10px;
     box-shadow: 10px 10px 10px gray;
@@ -67,13 +68,13 @@ body {
 }
 
 .contenido .presentacion .descripcion h2 {
-    font-size: 2.5em;
+    font-size: 2em;
     color: crimson;
     font-weight: bolder;
 }
 
 .contenido .presentacion .descripcion p {
-    font-size: 1.5em;
+    font-size: 1.2em;
     justify-self: center;
     align-items: center;
     line-height: 50px;
@@ -99,7 +100,7 @@ body {
 }
 
 .contenido .tiempo .tiempo-titulo h2 {
-    font-size: 1.5em;
+    font-size: 1.2em;
     display: inline-block;
     position: relative;
     justify-self: center;
@@ -156,27 +157,27 @@ body {
 
 .contenido .tiempo .tiempo-dividido .actividades h4 {
     color: #ed143d;
-    font-size: 1.5em;
+    font-size: 1.2em;
     font-weight: bold;
 }
 
 .contenido .tiempo .tiempo-dividido .actividades p {
     color: #1B678C;
-    font-size: 1.5em;
+    font-size: 1.2em;
     font-weight: bolder;
     margin: 0;
     padding: 0 5px;
 }
 
 footer {
+    background-color: #419CCA;
+    border: 1px solid black;
+    box-shadow: -100px -100px -100px #baba;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
     position: relative;
     z-index: 5;
-    background-color: #419CCA;
-    border: 1px solid black;
-    box-shadow: -100px -100px -100px #baba;
     text-align: center;
     margin-top: 100px;
     padding: 10px 15px;
@@ -189,7 +190,7 @@ footer .info-desa {
 }
 
 footer .info-desa h3 {
-    font-size: 1.5em;
+    font-size: 1em;
     font-style: italic;
     color: white;
     margin-left: 80px;
@@ -207,7 +208,7 @@ footer .social-desa {
 
 footer .social-desa h2 {
     color: #f3ff3b;
-    font-size: 1.8em;
+    font-size: 1.3em;
     font-style: italic;
     letter-spacing: 5px;
     font-weight: bolder;
@@ -219,7 +220,7 @@ footer .social-desa a img {
 }
 
 footer .social-desa h3 {
-    font-size: 1.5em;
+    font-size: 1em;
     font-style: italic;
     color: white;
 }
