--- a/css/perfil.css
+++ b/css/perfil.css
@@ -77,16 +77,17 @@ body {
 
 .contenido .presentacion .descripcion h2 {
     font-size: 2em;
-    color: crimson;
+    color: #f3ff3b;
     font-weight: bolder;
 }
 
 .contenido .presentacion .descripcion p {
+    color: white;
     font-size: 1.2em;
+    font-weight: bold;
     justify-self: center;
     align-items: center;
     line-height: 50px;
-    /* padding: 0 30px 0 10px; */
 }
 
 .contenido .tiempo {
