--- a/css/estilos.css
+++ b/css/estilos.css
@@ -275,10 +275,19 @@ body {
 }
 
 .contenido .presentacion .btn:hover {
-    color: yellowgreen;
     background-color: rgba(0, 0, 0, .9);
     transition: .7s;
 }
+
+
+/* 
+.contenido .presentacion .iz {
+    left: 10px;
+}
+
+.contenido .presentacion .dere {
+    right: 10px;
+} */
 
 .contenido .presentacion .page {
     position: absolute;
@@ -286,15 +295,14 @@ body {
     left: 0px;
     right: 0px;
     bottom: 10px;
-    /* display: none; */
+    padding-right: 10px;
 }
 
 .contenido .presentacion .page li {
     display: inline-block;
     list-style: none;
-    width: 25px;
-    height: 25px;
-    background-color: yellowgreen;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     cursor: pointer;
 }
