--- a/css/estilos.css
+++ b/css/estilos.css
@@ -341,7 +341,7 @@ body {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     gap: 10px;
-    height: 300px;
+    height: 220px;
     padding-bottom: 20px;
     justify-items: center;
     overflow-x: auto;
@@ -367,7 +367,7 @@ body {
     text-align: center;
     justify-items: center;
     width: 200px;
-    height: 250px;
+    height: 180px;
     margin: 0 20px;
     border: 1px solid gray;
     box-shadow: -8px 10px 10px #AEB2B2;
@@ -376,11 +376,11 @@ body {
 
 .contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas h4 {
     color: #000;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 .contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas img {
-    width: 80%;
+    width: 50%;
     text-align: center;
 }
 
@@ -389,7 +389,7 @@ body {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     gap: 10px;
-    height: 300px;
+    height: 220px;
     justify-items: center;
     overflow-x: auto;
 }
@@ -414,7 +414,7 @@ body {
     text-align: center;
     justify-items: center;
     width: 200px;
-    height: 250px;
+    height: 180px;
     margin: 0 20px;
     border: 1px solid gray;
     box-shadow: -10px 5px 15px 0px #AEB2B2;
@@ -423,11 +423,11 @@ body {
 
 .contenido .mi_trabajo .formateo .sistemas_operativos .windows .windows-distribuciones .sistemas h4 {
     color: #000;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 .contenido .mi_trabajo .formateo .sistemas_operativos .windows .windows-distribuciones .sistemas img {
-    width: 80%;
+    width: 50%;
     text-align: center;
 }
 
@@ -511,10 +511,12 @@ body {
 }
 
 .contenido .mi_trabajo .formateo .programas .programas-contenedor .izquierda {
+    border-radius: 50%;
     left: 10px;
 }
 
 .contenido .mi_trabajo .formateo .programas .programas-contenedor .derecha {
+    border-radius: 50%;
     right: 10px;
 }
 
@@ -560,9 +562,8 @@ body {
 
 .contenido .accesorios .celulares .accesorio-celular {
     display: grid;
-    grid-template-rows: 40px 200px 40px;
+    grid-template-rows: 40px 200px 60px;
     align-items: center;
-    /* justify-items: center; */
     width: 250px;
     margin: auto 15px;
     border: 1px solid #bababa;
@@ -585,6 +586,7 @@ body {
 }
 
 .contenido .accesorios .celulares .accesorio-celular a {
+    color: #419CCA;
     height: 40px;
     margin-top: -5px;
     text-decoration: none;
@@ -592,7 +594,7 @@ body {
 }
 
 .contenido .accesorios .celulares .accesorio-celular a:hover {
-    color: #fff;
+    color: #f3ff3b;
     font-weight: bolder;
     background-color: #bababa;
     border-radius: 20px;
@@ -614,28 +616,42 @@ body {
 
 .contenido .accesorios .pc .accesorio-pc {
     display: grid;
-    grid-template-rows: 60px 250px 60px;
+    grid-template-rows: 40px 200px 60px;
     align-items: center;
     width: 250px;
-    height: 250px;
-    margin: 15px 15px;
-    border: 1px solid black;
+    margin: auto 15px;
+    border: 1px solid #bababa;
+    font-weight: bold;
     border-radius: 20px;
-    box-shadow: 5px 5px 5px #808080;
+    box-shadow: 5px 5px 5px #baba;
 }
 
-.contenido .accesorios .titulo-computadores h2 {
-    margin-top: 110px;
+.contenido .accesorios .pc .accesorio-pc h3 {
+    line-height: 40px;
+    height: 40px;
+    font-size: 1.5em;
+    margin: 0;
 }
 
 .contenido .accesorios .pc .accesorio-pc img {
-    width: 90%;
+    width: 80%;
+    height: 90%;
     justify-self: center;
 }
 
 .contenido .accesorios .pc .accesorio-pc a {
-    height: 50px;
-    align-self: center;
+    color: #419CCA;
+    height: 40px;
+    margin-top: -5px;
+    text-decoration: none;
+    line-height: 40px;
+}
+
+.contenido .accesorios .pc .accesorio-pc a:hover {
+    color: #f3ff3b;
+    font-weight: bolder;
+    background-color: #bababa;
+    border-radius: 20px;
 }
 
 
